[gd_scene load_steps=4 format=2]

[ext_resource path="res://Collectables/GenrileCollectables/Money/Gems/Gems.png" type="Texture" id=1]
[ext_resource path="res://Collectables/GenrileCollectables/Money/Gems/Gem.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Gem" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HorizontalDirection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 2

[node name="DownRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Gem_body_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
